feat: improve file structure and styling menu - Dossier "dist" renommé "public". - Création et compression des images en différentes tailles. - Modification du h1. - Modification de l'organisation des variables et de leurs noms. - Stylisation des pages de menu.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Node dependencies
-
 node_modules/
 
 # SASS files
-
 .sass-cache*
 *.map
 
 # System files
-
 .directory
+
+# HTML menu template
+menu-template.html
+src/html/menu-template.html
