--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ohmyfood",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch src/main.scss:dist/style/main.css"
+    "sass": "sass --watch src/main.scss:public/style/main.css"
   },
   "keywords": [],
   "author": "",
